--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "gulp": "^3.9.1",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4"
+  },
+  "dependencies": {
+    "natives": "^1.1.6"
   }
 }
